--- a/menu_project/menu/templates/menu.html
+++ b/menu_project/menu/templates/menu.html
@@ -1,7 +1,7 @@
 <ul>
   {% for item in menu_items %}
     <li>
-      <a href="/{{ item.get_url }}" {% if item.active %}style="font-weight: bold;"{% endif %}>
+      <a href="{{ item.get_url }}" {% if item.active %}style="font-weight: bold;"{% endif %}>
         {{ item.title }}
       </a>
       {% if item.tree_children and item.expanded %}
